# MediaProxy

./: .gitignore  .gitlab-ci.yml  .helmignore  Cargo.toml  Chart.yaml  Dockerfile  README.md  docker-compose.yml  gitlab-ci.yml  nginx.conf  values.yaml
.github/workflows/: chart.yml  charts.yml  images.yml
mediaproxy/: Cargo.toml
mediaproxy-lib/: Cargo.toml
mediaproxy-lib/src/: lib.rs
mediaproxy-router/: Cargo.toml
mediaproxy-router/src/: forwarder.rs  main.rs
mediaproxy/src/: imageops.rs  main.rs
mediaproxy/src/handler/: query.rs
src/: fetching.rs  imageops.rs  main.rs  optimizer.rs  performance.rs
src/fetching/: fetching.rs  mod.rs  validation.rs
src/handler/: query.rs
templates/: _helpers.tpl  ingress.yaml
templates/nginx/: config.yaml  deployment.yaml  hpa.yaml  service.yaml
templates/router/: deployment.yaml  hpa.yaml  service.yaml
templates/server/: deployment.yaml  hpa.yaml  service.yaml
test/: test.sh
